--- a/index.html
+++ b/index.html
@@ -38,15 +38,43 @@
 </style>
 </head>
 
-<body>
-    <header>
+<body class="font-lato">
+    <header class="container mx-auto">
+
+        <!-- Nav Section -->
+
+        <nav>
+            <div class="navbar mt-12 px-12 bg-[#F85559] rounded-full h-28">
+                <div class="navbar-start">
+                  <div>
+                    <ul class="flex gap-8 text-white text-lg">
+                      <li><a href="">Home</a></li>
+                      <li><a href="">About Us</a></li>
+                      <li><a href="">Shop</a></li>
+                      <li><a href="">All Fruits</a></li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="navbar-center pb-4">
+                  <a class="btn btn-ghost normal-case text-4xl text-white text-center"><img src="./images/logo.png" alt="">Fruit Burst</a>
+                </div>
+                <div class="navbar-end">
+                      <div class="relative">
+                        <input type="text" class="px-6 py-2 pr-40 border border-white rounded-full focus:outline-none focus:ring focus:border-white" placeholder="Search here">
+                        <button class="absolute top-0 right-0 h-full bg-white text-white rounded-full px-4 py-2">
+                        <img src="./images/search.png" alt="Search Icon" class="h-6 w-6">
+                        </button>
+                      </div>       
+                </div>
+              </div>
+        </nav>
 
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
