--- a/index.html
+++ b/index.html
@@ -72,7 +72,67 @@
         </nav>
       </header>
 
-    <main>
+    <main class="container mx-auto ">
+
+      <!-- Team Section -->
+
+      <section>
+        <div class="hero rounded-lg" style="background-image: url('./images/team.png');">
+          <div class="hero-overlay bg-opacity-70 rounded-lg "></div>
+          <div class=" text-center text-neutral-content">
+            <div>
+              <div>
+                <h1 class="mb-5 text-5xl font-extrabold mt-32">Meet the team section</h1>
+              <p class="mb-5 mt-6">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+              </div>
+              <div class="grid grid-cols-4 justify-center -mr-20 text-center mt-12 mb-32">
+                <div class="mr-20">
+                  <img src="./images/member1.png" alt="">
+                  <h3 class="font-bold mt-8 mb-2">Awlad Hossain</h3>
+                  <p class="mb-4">Fruits Expert</p>
+                  <div class="flex justify-center items-center gap-3">
+                  <a><img src="./images/facebookpink.png" alt=""></a> 
+                  <a><img src="./images/twitterpink.png" alt=""></a> 
+                  <a><img src="./images/linkedinpink.png" alt=""></a>
+                  </div> 
+                </div>
+                <div class="mr-20">
+                  <img src="./images/member2.png" alt="">
+                  <h3 class="font-bold mt-8 mb-2">Safia Chowdhury</h3>
+                  <p class="mb-4">Fruits Expert</p>
+                  <div class="flex justify-center items-center gap-3">
+                    <a><img src="./images/facebookpink.png" alt=""></a> 
+                  <a><img src="./images/twitterpink.png" alt=""></a> 
+                  <a><img src="./images/linkedinpink.png" alt=""></a>
+                    </div> 
+                </div>
+                <div  class="mr-20">
+                  <img src="./images/member3.png" alt="">
+                  <h3 class="font-bold mt-8 mb-2">Rokib Hossain</h3>
+                  <p class="mb-4">Fruits Expert</p>
+                  <div class="flex justify-center items-center gap-3">
+                    <a><img src="./images/facebookpink.png" alt=""></a> 
+                  <a><img src="./images/twitterpink.png" alt=""></a> 
+                  <a><img src="./images/linkedinpink.png" alt=""></a>
+                    </div> 
+                </div>
+                <div class="mr-20">
+                  <img src="./images/member4.png" alt="">
+                  <h3 class="font-bold mt-8 mb-2">Chaity</h3>
+                  <p class="mb-4">Fruits Expert</p>
+                  <div class="flex justify-center items-center gap-3">
+                    <a><img src="./images/facebookpink.png" alt=""></a> 
+                  <a><img src="./images/twitterpink.png" alt=""></a> 
+                  <a><img src="./images/linkedinpink.png" alt=""></a>
+                    </div>
+                </div>
+                
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </section>
 
     </main>
     <footer class="footer footer-center p-10 bg-[#121212] text-white text-base-content space-y-5 mt-36">
